@@ -1,3 +1,8 @@
+2005-02-17  Marc Singer  <elf@buici.com>
+
+	* src/arch-arm/lib/relocate.c (__section): Implemented a simpler
+	copy loop to help some platforms along.
+
 2005-02-16  Marc Singer  <elf@buici.com>
 
 	* src/mach-ixp42x/nslu2_config (CONFIG_ENV_REGION): Changed the
